# ai_project

./: .gitmodules  CMakeLists.txt  README.md  go.mod  go.sum  main.cpp  main.go
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  ChatMessage.tsx
